--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <h1>Giải phương trình bậc 2: ax2 + bx + c = 0</h1>
-    <form action="index.php" method="POST">
+    <form>
         <div class="mb-3">
             <label for="number-a" class="form-label">Nhập số a</label>
             <input type="number" class="form-control" id="number-a" name="number-a" required>
@@ -41,34 +41,47 @@
             <label for="number-c" class="form-label">Nhập số c</label>
             <input type="number" class="form-control" id="number-c" name="number-c" required>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="button" class="btn btn-primary">Submit</button>
     </form>
+    <h5 class="mt-3"></h5>
 </body>
 
-</html>
+<script>
+    const btn = document.querySelector('button')
+    const h5 = document.querySelector('h5')
+    
+    btn.addEventListener('click', e => {
+        const a = document.querySelector('#number-a').value
+        const b = document.querySelector('#number-b').value
+        const c = document.querySelector('#number-c').value
 
-<?php
-    if ($_SERVER['REQUEST_METHOD'] === 'POST') {
-        $a = $_POST['number-a'];
-        $b = $_POST['number-b'];
-        $c = $_POST['number-c'];
-
-        if ($a == 0) {
-            echo '<h5 class="mt-3">Phương trình bậc 2 số a phải khác 0</h5>';
-            return;
+        if (a === '' || b === '' || c === '') {
+            h5.innerHTML = 'Vui lòng nhập đủ số a, b, c'
+            return
+        }
+        if (a == 0) {
+            h5.innerHTML = 'Phương trình bậc 2 số a phải khác 0'
+            return
+        }
+        if (isNaN(a) || isNaN(b) || isNaN(c)) {
+            h5.innerHTML = 'a, b, c phải là số'
+            return
         }
 
-        $delta = $b * $b - 4 * $a * $c;
+        const delta = b * b - 4 * a * c
+        const result = document.querySelector('h5')
 
-        if ($delta < 0) {
-            echo '<h5 class="mt-3">Phương trình vô nghiệm</h5>';
-        } else if ($delta === 0) {
-            $x = -$b / (2 * $a);
-            echo '<h5 class="mt-3">Phương trình có nghiệm kép x = ' . round($x, 2) . '</h5>';
+        if (delta < 0) {
+            h5.innerHTML = 'Phương trình vô nghiệm'
+        } else if (delta === 0) {
+            const x = -b / (2 * a)
+            h5.innerHTML = `Phương trình có nghiệm kép x = ${x.toFixed(2)}`
         } else {
-            $x1 = (-$b + sqrt($delta)) / (2 * $a);
-            $x2 = (-$b - sqrt($delta)) / (2 * $a);
-            echo '<h5 class="mt-3">Phương trình có 2 nghiệm phân biệt x1 = ' . round($x1, 2) . ' và x2 = ' . round($x2, 2) . '</h5>';
+            const x1 = (-b + Math.sqrt(delta)) / (2 * a)
+            const x2 = (-b - Math.sqrt(delta)) / (2 * a)
+            h5.innerHTML = `Phương trình có 2 nghiệm phân biệt x1 = ${x1.toFixed(2)} và x2 = ${x2.toFixed(2)}`
         }
-    }
-?>
+    })
+</script>
+
+</html>
